gccida/c3/cselib_finish
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_finish/src/cselib.c:1906:13: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_empty( hash_table_0); 
            ^~~~~~~~~~~~
            hash_table
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_finish/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_finish/src/cselib.c:1931:14: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_delete( hash_table_0); 
             ^~~~~~~~~~~~
             hash_table
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_finish/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_finish/src/obj/cselib.o] Error 1
